Make sure chosen selection don't stretch outside their container at the md size

--- a/ckanext/dgu/theme/src/css/dgu-ckan.less
+++ b/ckanext/dgu/theme/src/css/dgu-ckan.less
@@ -2127,6 +2127,7 @@ body.controller-widgets.action-index {
 
 .chosen-container {
   border: solid 2px #ddd;
+  width: 100% !important;
 }
 
 .facet-option em {
